updated at: 2020-02-26 16:58, ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - - BOOTH

--- a/VRChat/67/1342867.html
+++ b/VRChat/67/1342867.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」 - MISTRAL WORKS - BOOTH
+      ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - -
+      BOOTH
     </title>
     <meta name="description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
@@ -13,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」 - MISTRAL WORKS - BOOTH">
+    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - - BOOTH">
     <meta name="twitter:description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/67afa0ad-9633-4152-aeb6-5eebdb964712_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」 - MISTRAL WORKS - BOOTH">
+    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - - BOOTH">
     <meta property="og:description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
     <meta property="og:image" content=
@@ -80,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="mistralworks" data-product-category=
         "127" data-product-id="1342867" data-product-list=
-        "market_show" data-product-price="1500" data-tracking=
+        "market_show" data-product-price="1200" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -144,7 +145,8 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」
+                          ３Dモデル「カナ・アナベラル 」byミストラル
+                          「VRC可」[フォロワー300人突破記念 3/8まで300円引き]
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -184,7 +186,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 1,500
+                                    ¥ 1,200
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -197,7 +199,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1342867"
-                                      data-product-price="1500"
+                                      data-product-price="1200"
                                       data-product-brand=
                                       "mistralworks"
                                       data-product-category="127"
@@ -214,7 +216,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1342867"
-                                        data-product-price="1500"
+                                        data-product-price="1200"
                                         data-product-brand=
                                         "mistralworks"
                                         data-product-category="127"
@@ -305,7 +307,7 @@
                           "https://booth.pm/ja/items/1342867"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」 | MISTRAL WORKS"
+                          "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] | MISTRAL WORKS"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -325,8 +327,9 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」" class=
-                            "market-item-detail-item-image" src=
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/67afa0ad-9633-4152-aeb6-5eebdb964712_base_resized.jpg">
                           </div>
                         </div>
@@ -334,8 +337,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」" class=
-                            "market-item-detail-item-image"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/0b4a5795-1484-4bd2-a8c3-d8faf353ad2f_base_resized.jpg">
                           </div>
@@ -344,8 +347,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」" class=
-                            "market-item-detail-item-image"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/2950d497-aad2-4cb3-821c-13a93c3c1655_base_resized.jpg">
                           </div>
@@ -354,8 +357,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」" class=
-                            "market-item-detail-item-image"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/a569c8db-333d-4d89-b4f3-765fe330d57a_base_resized.jpg">
                           </div>
@@ -364,8 +367,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」" class=
-                            "market-item-detail-item-image"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/20a56773-ad2d-43e7-910a-e94e56b73d4c_base_resized.jpg">
                           </div>
