--- a/VRChat/42/1069342.html
+++ b/VRChat/42/1069342.html
@@ -27,7 +27,6 @@
     "https://booth.pximg.net/c/620x620/8254d2af-29c2-4f0d-b9b6-9ebf2add62f7/i/1069342/931f2d03-70b6-4202-889f-63c51e02b041_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1069342">
-    <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -37,9 +36,6 @@
     "js_const_base_domain">
     <meta content="false" name="js_const_user_signed_in">
     <meta content="&quot;ja&quot;" name="js_const_user_locale">
-    <meta content=
-    "&quot;https://accounts.pixiv.net/cors/status&quot;" name=
-    "js_const_pixiv_status">
     <meta content=
     "&quot;https://accounts.booth.pm/wish_lists.json&quot;" name=
     "js_const_wish_lists_url">
@@ -134,7 +130,8 @@
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           箱市展示物_剣
                         </h2>
-                        <div class="item-summary__caption"></div>
+                        <div class=
+                        "u-text-assertive u-tpg-caption1"></div>
                       </header>
                       <section>
                         <div class="wish-list-link">
@@ -154,16 +151,16 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069342/wish_list"></a>
                         </div>
-                        <ul class="variations u-mt-300" id=
-                        "variations">
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
+                        <ul class="variations u-mt-300 u-border-b"
+                        id="variations">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       ダウンロード商品
                                     </div>
                                   </div>
@@ -233,7 +230,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="primary-image-thumbnails">
+                      <div class=
+                      "primary-image-thumbnails u-d-sp-none">
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
