updated at: 2020-02-27 17:04, PA9 T-Shirt A - Production ℵː9 - BOOTH

--- a/VRChat/28/1385528.html
+++ b/VRChat/28/1385528.html
@@ -27,7 +27,6 @@
     "https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1385528/f2434f83-a27e-4581-93c8-2303fc6e4aef_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1385528">
-    <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -37,9 +36,6 @@
     "js_const_base_domain">
     <meta content="false" name="js_const_user_signed_in">
     <meta content="&quot;ja&quot;" name="js_const_user_locale">
-    <meta content=
-    "&quot;https://accounts.pixiv.net/cors/status&quot;" name=
-    "js_const_pixiv_status">
     <meta content=
     "&quot;https://accounts.booth.pm/wish_lists.json&quot;" name=
     "js_const_wish_lists_url">
@@ -133,7 +129,8 @@
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           PA9 T-Shirt A
                         </h2>
-                        <div class="item-summary__caption"></div>
+                        <div class=
+                        "u-text-assertive u-tpg-caption1"></div>
                       </header>
                       <section>
                         <div class="wish-list-link">
@@ -153,10 +150,10 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1385528/wish_list"></a>
                         </div>
-                        <ul class="variations u-mt-300" id=
-                        "variations">
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
+                        <ul class="variations u-mt-300 u-border-b"
+                        id="variations">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
                               <div class=
                               "market-item-variation-thumbnail">
                                 <div>
@@ -164,15 +161,16 @@
                                   "https://factory.pixiv.net/files/uploads/i/conceptual_drawing/8f3855b3-6253-442d-be71-6f1cdf46b883/lightweight_e8293d299a.png">
                                 </div>
                               </div>
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
-                                    <div class="variation-name">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
+                                    <div class=
+                                    "variation-name u-text-wrap">
                                       Tシャツ - S - 両面
                                     </div>
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       物販商品（pixivFACTORYから発送）
                                     </div>
                                   </div>
@@ -224,8 +222,8 @@
                               </div>
                             </div>
                           </li>
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
                               <div class=
                               "market-item-variation-thumbnail">
                                 <div>
@@ -233,15 +231,16 @@
                                   "https://factory.pixiv.net/files/uploads/i/conceptual_drawing/959e05ed-8408-4ffb-8303-60bc47450e0a/lightweight_f6953fdda9.png">
                                 </div>
                               </div>
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
-                                    <div class="variation-name">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
+                                    <div class=
+                                    "variation-name u-text-wrap">
                                       Tシャツ - M - 両面
                                     </div>
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       物販商品（pixivFACTORYから発送）
                                     </div>
                                   </div>
@@ -293,8 +292,8 @@
                               </div>
                             </div>
                           </li>
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
                               <div class=
                               "market-item-variation-thumbnail">
                                 <div>
@@ -302,15 +301,16 @@
                                   "https://factory.pixiv.net/files/uploads/i/conceptual_drawing/f9aae6ff-b706-48d3-a00b-0b042f8b0c51/lightweight_ef64378bca.png">
                                 </div>
                               </div>
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
-                                    <div class="variation-name">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
+                                    <div class=
+                                    "variation-name u-text-wrap">
                                       Tシャツ - L - 両面
                                     </div>
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       物販商品（pixivFACTORYから発送）
                                     </div>
                                   </div>
@@ -362,8 +362,8 @@
                               </div>
                             </div>
                           </li>
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
                               <div class=
                               "market-item-variation-thumbnail">
                                 <div>
@@ -371,15 +371,16 @@
                                   "https://factory.pixiv.net/files/uploads/i/conceptual_drawing/5c62f536-f4d3-411a-9296-f50dd1a01417/lightweight_7243029af8.png">
                                 </div>
                               </div>
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
-                                    <div class="variation-name">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
+                                    <div class=
+                                    "variation-name u-text-wrap">
                                       Tシャツ - XL - 両面
                                     </div>
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       物販商品（pixivFACTORYから発送）
                                     </div>
                                   </div>
@@ -510,7 +511,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="primary-image-thumbnails">
+                      <div class=
+                      "primary-image-thumbnails u-d-sp-none">
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -681,9 +683,9 @@
                   </div>
                 </div>
                 <section class="container">
-                  <div class="market-item-detail-tag-section">
+                  <div class="u-border-t u-py-500">
                     <div class="mobile-section">
-                      <h3 class="sectionhead">
+                      <h3 class="u-m-0">
                         タグ
                       </h3>
                     </div>
@@ -709,15 +711,14 @@
                       </div>
                     </div>
                     <div class="mobile-section">
-                      <div class="market-item-detail-search-link">
-                        <a class="btn negative" data-tracking=
-                        "click" data-product-list=
+                      <div class="u-my-500 u-mt-sp-300">
+                        <a class=
+                        "btn btn--default-outline u-tpg-caption1 u-text-wrap"
+                        data-tracking="click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
                         "https://booth.pm/ja/browse/T%E3%82%B7%E3%83%A3%E3%83%84?q=vrchat">
-                        <div class="search-label">
-                          vrchat x Tシャツ で検索
-                        </div></a>
+                        vrchat x Tシャツ で検索</a>
                       </div>
                     </div>
                   </div>
