--- a/VRChat/82/1351982.html
+++ b/VRChat/82/1351982.html
@@ -28,7 +28,6 @@
     "https://booth.pximg.net/c/620x620/dc8c3f8f-fa2c-4253-a304-2d58119dd358/i/1351982/36a19f3c-f256-4b59-a653-5a828b41b57f_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1351982">
-    <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -38,9 +37,6 @@
     "js_const_base_domain">
     <meta content="false" name="js_const_user_signed_in">
     <meta content="&quot;ja&quot;" name="js_const_user_locale">
-    <meta content=
-    "&quot;https://accounts.pixiv.net/cors/status&quot;" name=
-    "js_const_pixiv_status">
     <meta content=
     "&quot;https://accounts.booth.pm/wish_lists.json&quot;" name=
     "js_const_wish_lists_url">
@@ -135,7 +131,8 @@
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置
                         </h2>
-                        <div class="item-summary__caption"></div>
+                        <div class=
+                        "u-text-assertive u-tpg-caption1"></div>
                       </header>
                       <section>
                         <div class="wish-list-link">
@@ -155,16 +152,16 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1351982/wish_list"></a>
                         </div>
-                        <ul class="variations u-mt-300" id=
-                        "variations">
-                          <li class="variation-item">
-                            <div class="lo-grid lo-grid-top">
-                              <div class="variation-item-summary">
-                                <div class=
-                                "lo-grid u-align-items-center">
-                                  <div class="lo-grid-cell">
+                        <ul class="variations u-mt-300 u-border-b"
+                        id="variations">
+                          <li class="variation-item u-border-t">
+                            <div class="u-d-flex">
+                              <div class="u-flex-1 u-min-w-0">
+                                <div class="u-d-flex">
+                                  <div class=
+                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
-                                    "variation-caption variation-caption--type">
+                                    "u-tpg-caption1 u-text-gray-300">
                                       ダウンロード商品
                                     </div>
                                   </div>
@@ -293,7 +290,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="primary-image-thumbnails">
+                      <div class=
+                      "primary-image-thumbnails u-d-sp-none">
                         <a class="pointer">
                         <div class=
                         "youtube-thumbnail slick-thumbnail-border">
@@ -331,9 +329,9 @@
                   </div>
                 </div>
                 <section class="container">
-                  <div class="market-item-detail-tag-section">
+                  <div class="u-border-t u-py-500">
                     <div class="mobile-section">
-                      <h3 class="sectionhead">
+                      <h3 class="u-m-0">
                         タグ
                       </h3>
                     </div>
@@ -456,15 +454,14 @@
                       </div>
                     </div>
                     <div class="mobile-section">
-                      <div class="market-item-detail-search-link">
-                        <a class="btn negative" data-tracking=
-                        "click" data-product-list=
+                      <div class="u-my-500 u-mt-sp-300">
+                        <a class=
+                        "btn btn--default-outline u-tpg-caption1 u-text-wrap"
+                        data-tracking="click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
                         "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=SF">
-                        <div class="search-label">
-                          SF x 3Dモデル で検索
-                        </div></a>
+                        SF x 3Dモデル で検索</a>
                       </div>
                     </div>
                   </div>
