--- a/VRChat/95/1153995.html
+++ b/VRChat/95/1153995.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫の七草粥 - BOOTH
+      VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫ノ七草粥 - BOOTH
     </title>
     <meta name="description" content=
     "簡単な作りのイヤリングです。 (大幅に内容を変更しました。[2019/05/02])">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫の七草粥 - BOOTH">
+    "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫ノ七草粥 - BOOTH">
     <meta name="twitter:description" content=
     "簡単な作りのイヤリングです。 (大幅に内容を変更しました。[2019/05/02])">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/97c114c0-fba8-44bb-94b5-aaa1efd40633/i/1153995/39163568-c597-460a-9676-08ae08d217c1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫の七草粥 - BOOTH">
+    "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 - 緑紫ノ七草粥 - BOOTH">
     <meta property="og:description" content=
     "簡単な作りのイヤリングです。 (大幅に内容を変更しました。[2019/05/02])">
     <meta property="og:image" content=
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -117,11 +119,11 @@
                           href="https://nanaji.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="緑紫の七草粥" class=
+                            <img alt="緑紫ノ七草粥" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4927604/icon_image/7eccbfff-2ee9-42bd-af67-164fd5e322de_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              緑紫の七草粥
+                              緑紫ノ七草粥
                             </div>
                           </div></a>
                         </div>
@@ -206,7 +208,7 @@
                           "https://booth.pm/ja/items/1153995"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 | 緑紫の七草粥"
+                          "VRC向け装飾品3Dモデル[ジェムイヤリング]v1.1.0 | 緑紫ノ七草粥"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
