updated at: 2020-03-02 21:11, [VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1 - - BOOTH

--- a/VRChat/57/1099957.html
+++ b/VRChat/57/1099957.html
@@ -59,6 +59,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -118,11 +120,11 @@
                           href="https://nanaji.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="緑紫の七草粥" class=
+                            <img alt="緑紫ノ七草粥" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4927604/icon_image/7eccbfff-2ee9-42bd-af67-164fd5e322de_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              緑紫の七草粥
+                              緑紫ノ七草粥
                             </div>
                           </div></a>
                         </div>
@@ -222,7 +224,7 @@
                           "https://booth.pm/ja/items/1099957"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "[VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1 | 緑紫の七草粥"
+                          "[VRC想定]オリジナル3Dモデル [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1 | 緑紫ノ七草粥"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
