updated at: 2020-03-02 22:45, 【VRchat想定モデル】オリジナル3Dモデル「結」 - MIUKI&#39;S SHOP - BOOTH

--- a/VRChat/87/1325787.html
+++ b/VRChat/87/1325787.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRchat想定モデル】オリジナル3Dモデル「結」 - みうきのショップ - BOOTH
+      【VRchat想定モデル】オリジナル3Dモデル「結」 - MIUKI'S SHOP - BOOTH
     </title>
     <meta name="description" content=
     "VRChat想定3Dモデルです。 ・フルトラッキング対応 ・リップシンク対応 ・アイトラッキング対応 ・ARKtoonシェーダー使用 ・中含物 yui allmesh.FBX（すべてのオブジェクトが統合されているFBXデータです。） yui.unitypackage（VRCSDKがある状態でインポートすればすぐ使用できるようにセッティングしています。ダイナミックボーンがあれば髪・スカートが揺れます。） Texture （各種テクスチャデータが入ってます。） 利用規約.txt（以下の文が書かれたテキストファイルです。） ・規約 二次配布（アバターペデスタルによる配布含む）">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRchat想定モデル】オリジナル3Dモデル「結」 - みうきのショップ - BOOTH">
+    "【VRchat想定モデル】オリジナル3Dモデル「結」 - MIUKI'S SHOP - BOOTH">
     <meta name="twitter:description" content=
     "VRChat想定3Dモデルです。 ・フルトラッキング対応 ・リップシンク対応 ・アイトラッキング対応 ・ARKtoonシェーダー使用 ・中含物 yui allmesh.FBX（すべてのオブジェクトが統合されているFBXデータです。） yui.unitypackage（VRCSDKがある状態でインポートすればすぐ使用できるようにセッティングしています。ダイナミックボーンがあれば髪・スカートが揺れます。） Texture （各種テクスチャデータが入ってます。） 利用規約.txt（以下の文が書かれたテキストファイルです。） ・規約 二次配布（アバターペデスタルによる配布含む）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e136fa4e-7f1d-49be-89ef-2cf6b27f478b/i/1325787/d4174a9b-bd05-4e1e-8dda-9e2c5864a622_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRchat想定モデル】オリジナル3Dモデル「結」 - みうきのショップ - BOOTH">
+    "【VRchat想定モデル】オリジナル3Dモデル「結」 - MIUKI'S SHOP - BOOTH">
     <meta property="og:description" content=
     "VRChat想定3Dモデルです。 ・フルトラッキング対応 ・リップシンク対応 ・アイトラッキング対応 ・ARKtoonシェーダー使用 ・中含物 yui allmesh.FBX（すべてのオブジェクトが統合されているFBXデータです。） yui.unitypackage（VRCSDKがある状態でインポートすればすぐ使用できるようにセッティングしています。ダイナミックボーンがあれば髪・スカートが揺れます。） Texture （各種テクスチャデータが入ってます。） 利用規約.txt（以下の文が書かれたテキストファイルです。） ・規約 二次配布（アバターペデスタルによる配布含む）">
     <meta property="og:image" content=
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -117,11 +119,11 @@
                           href="https://miukisas.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="みうきのショップ" class=
+                            <img alt="MIUKI'S SHOP" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5553052/icon_image/327d5739-3af0-4c06-8e94-c58f15422bc1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              みうきのショップ
+                              MIUKI'S SHOP
                             </div>
                           </div></a>
                         </div>
@@ -221,7 +223,7 @@
                           "https://booth.pm/ja/items/1325787"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRchat想定モデル】オリジナル3Dモデル「結」 | みうきのショップ"
+                          "【VRchat想定モデル】オリジナル3Dモデル「結」 | MIUKI'S SHOP"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
