--- a/VRChat/82/1021482.html
+++ b/VRChat/82/1021482.html
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -408,7 +410,10 @@
                             ②他夏服のプレハブを追加しました。_Sが付いているプレハブが夏服です。
                             ③AAShaderの調整 2020年2月29日
                             ビートセイバー用に調整した"ANNA""KALEN"のアバターファイルを追加しました。
-                            ☆利用規約 VRChat向けオリジナルアバター「狐児院のおんなのこ」
+                            2020年3月2日
+                            ビートセイバー用に調整したモデルに不具合があったため修正するとともに6キャラクター分のアバターを同梱しました。
+                            KitsuneBeatSaber_20200302 ☆利用規約
+                            VRChat向けオリジナルアバター「狐児院のおんなのこ」
                             〇本モデルを購入した時点で本利用規約に同意したものとします。
                             本規約は内容を変更される場合があり、最新のものが適用されます。
                             〇改変について。
