--- a/VRChat/17/1029817.html
+++ b/VRChat/17/1029817.html
@@ -55,6 +55,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -117,7 +119,7 @@
                           "u-d-flex u-align-items-center">
                             <img alt="Δ!＄i○⒩" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/1418434/icon_image/56c7e493-e4a7-47ca-852f-0613248a0fc5_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/1418434/icon_image/7e255e9e-a0b1-4770-b814-172de001f7f5_base_resized.jpg">
                             <div class="u-text-ellipsis">
                               Δ!＄i○⒩
                             </div>
