--- a/VRChat/98/921998.html
+++ b/VRChat/98/921998.html
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -166,6 +168,10 @@
                                   <div class=
                                   "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
+                                    "u-tpg-caption1 u-text-gray-500">
+                                      在庫なし
+                                    </div>
+                                    <div class=
                                     "u-tpg-caption1 u-text-gray-300">
                                       物販商品（pixivFACTORYから発送）
                                     </div>
@@ -177,44 +183,26 @@
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <form class="button_to" method=
-                                    "post" action=
-                                    "https://hushimero.booth.pm/cart?added_to_cart=true&amp;via=market">
-                                      <input type="hidden" name=
-                                      "_method" value=
-                                      "patch"><button class=
-                                      "btn add-cart full-length"
-                                      data-product-id="921998"
-                                      data-product-price="4050"
-                                      data-product-brand=
-                                      "hushimero"
-                                      data-product-category="163"
-                                      data-product-variant=
-                                      "1407088" data-tracking=
-                                      "add_item" data-product-list=
-                                      "from market_show via market to add_item"
-                                      type="submit"><input type=
-                                      "hidden" name=
-                                      "cart_item[variation_id]" id=
-                                      "cart_item_variation_id"
-                                      value="1407088"></button>
+                                    <div class=
+                                    "restock-request-links"
+                                    data-sign-in-path=
+                                    "/users/sign_in">
+                                      <a data-url=
+                                      "/variations/1407088/restock_request"
+                                      data-method="post" class=
+                                      "add-request js-add-restock-request btn submit full-length"
+                                      href="#">
                                       <div class="cmd-label">
-                                        <button class=
-                                        "btn add-cart full-length"
-                                        data-product-id="921998"
-                                        data-product-price="4050"
-                                        data-product-brand=
-                                        "hushimero"
-                                        data-product-category="163"
-                                        data-product-variant=
-                                        "1407088" data-tracking=
-                                        "add_item"
-                                        data-product-list=
-                                        "from market_show via market to add_item"
-                                        type=
-                                        "submit">カートに入れる</button>
-                                      </div>
-                                    </form>
+                                        入荷お知らせメールを受け取る
+                                      </div></a><a data-url=
+                                      "/variations/1407088/restock_request"
+                                      data-method="delete" class=
+                                      "remove-request js-remove-restock-request btn full-length delete ex-padding"
+                                      href="#">
+                                      <div class="cmd-label">
+                                        入荷お知らせメールを解除する
+                                      </div></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
