updated at: 2020-03-03 18:11, オリジナル3Dモデル「Flora」 - 白猫通りのナギ亭 - BOOTH

--- a/VRChat/44/1337544.html
+++ b/VRChat/44/1337544.html
@@ -59,6 +59,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -77,7 +79,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="naginagistore" data-product-category=
         "127" data-product-id="1337544" data-product-list=
-        "market_show" data-product-price="2500" data-tracking=
+        "market_show" data-product-price="2000" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -167,7 +169,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 2,500
+                                    ¥ 2,000
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -180,7 +182,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1337544"
-                                      data-product-price="2500"
+                                      data-product-price="2000"
                                       data-product-brand=
                                       "naginagistore"
                                       data-product-category="127"
@@ -197,7 +199,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1337544"
-                                        data-product-price="2500"
+                                        data-product-price="2000"
                                         data-product-brand=
                                         "naginagistore"
                                         data-product-category="127"
