updated at: 2020-03-03 20:00, (無料版あり)VRChatSSmemo - 弐百番商店 - BOOTH

--- a/VRChat/86/1289286.html
+++ b/VRChat/86/1289286.html
@@ -6,7 +6,7 @@
       (無料版あり)VRChatSSmemo - 弐百番商店 - BOOTH
     </title>
     <meta name="description" content=
-    "■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus Questは非対応です。 インストール手順、アプリの使い方は以下のURLから確認ください。">
+    "※二段階認証を有効化すると本アプリが使用不可となります。 ただいま二段階認証へ対応するための改良を行っています。 ■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1289286">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "(無料版あり)VRChatSSmemo - 弐百番商店 - BOOTH">
     <meta name="twitter:description" content=
-    "■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus Questは非対応です。 インストール手順、アプリの使い方は以下のURLから確認ください。">
+    "※二段階認証を有効化すると本アプリが使用不可となります。 ただいま二段階認証へ対応するための改良を行っています。 ■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/030f9ffc-6c5f-4905-a203-71e35f0d118a/i/1289286/37e33762-3a82-45bb-95b2-45f47f00d481_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "(無料版あり)VRChatSSmemo - 弐百番商店 - BOOTH">
     <meta property="og:description" content=
-    "■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus Questは非対応です。 インストール手順、アプリの使い方は以下のURLから確認ください。">
+    "※二段階認証を有効化すると本アプリが使用不可となります。 ただいま二段階認証へ対応するための改良を行っています。 ■VRChatSSmemo ■概要 VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。 デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。 ■動作確認環境 ・Windows 10(64bit) └VRChat(Steam版) ....├デスクトップモード ....└VRモード ※Oculus Store版VRChatは動作未確認です。 ※Oculus">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/030f9ffc-6c5f-4905-a203-71e35f0d118a/i/1289286/37e33762-3a82-45bb-95b2-45f47f00d481_base_resized.jpg">
     <meta property="og:url" content=
@@ -58,6 +58,8 @@
     "js_const_pixiv_fanbox_endpoint">
     <meta content="22" name="js_const_max_length_japanese">
     <meta content="60" name="js_const_max_length_overseas">
+    <meta content="30" name=
+    "js_const_stock_reservation_min_stock_amount">
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
@@ -307,6 +309,8 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            ※二段階認証を有効化すると本アプリが使用不可となります。
+                            ただいま二段階認証へ対応するための改良を行っています。
                             ■VRChatSSmemo ■概要
                             VRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。
                             デスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。
